# UWL_Level4_Laboratory

Autotools/src/: Makefile.am  student.c
Autotools2/: Makefile  Makefile.in  config.status  configure  configure.ac
Autotools2/autom4te.cache/: output.0  requests  traces.0  traces.1
Autotools2/src/: Makefile  Makefile.in  config.h  config.h.in  main.c  student.h
Autotools2/src/.deps/: main.Po  student.Po
Debugging/ex1/: SOLVED.txt  ex1.c  main
Debugging/ex2/: SOLVED.txt  ex2  ex2.c
Debugging/ex3/: SOLVED.txt  ex3  ex3.c
Debugging/ex4/: ex4  ex4.c  ex4.c~
Debugging/ex5/: SOLVED.txt  ex5  ex5.c  file.xml
Debugging/ex6/: SOLVED.txt  ex6  ex6.c
New_HTML/: index.html
New_HTML/pages/: aboutMe.html  myStudies.html
Week10/: .desktop  Week10_Ex1_odd  Week10_Ex3_palin  Week10_Ex4_powerof  Week10_Ex6_reverse_string  Week10_Ex7_fibonacci  Week10_Ex8_factorial  Week10_Ex9_greatest_number
Week11/: Studentv1  Studentv1~  Studentv2
Week4/: Myhtml1.html  Myhtml2.html
Week5/: Hamza_html_C.html  Hamza_html_Home.html  Hamza_html_Java.html  Hamza_html_Scheme.html
Week5/Html_pages_images/: Hamza_html_C.html  Hamza_html_Home.html  Hamza_html_Index.html  Hamza_html_Java.html  Hamza_html_Scheme.html
Week8/Week8_Ex1/: even  number  odd  odd.c  odd.c~  oddv2.c  oddv2.c~
Week8/Week8_Ex10/: a  ascii.c
Week8/Week8_Ex2/: prime  prime.c
Week8/Week8_Ex3/: palin  palindrome.c  palindrome.c~
Week8/Week8_Ex4/: power  powerof2.c  powerof2v2.c  powerof2v2.c~  test
Week8/Week8_Ex5/: a.out  array.c  array.c~
Week8/Week8_Ex6/: main.c  main.c~  reverse
(+40 files in other folders)
